--- a/index.css
+++ b/index.css
@@ -200,7 +200,7 @@ body{
 /* Hero Section */
 .hero {
     background: #131313;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/pikilia.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/img/pikilia.jpg');
     background-size: cover;
     padding: 200px;
 }
@@ -268,7 +268,7 @@ body{
 @media screen and (max-width: 1300px) {
     .hero {
         background: #131313;
-        background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/fetchtom.jpg');
+        background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/img/fetchtom.jpg');
         background-size: cover;        
     }
 
