--- a/index.css
+++ b/index.css
@@ -269,6 +269,7 @@ body{
     .hero {
         background: #131313;
         background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./img/fetchtom.jpg');
+        background-position: center;
         background-size: cover;        
     }
 
