--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Palace_Hand_DB";
-    src: url('../font/PAHDB.TTF');
+    src: url('./font/PAHDB.TTF');
 }
 
 body{
