--- a/index.css
+++ b/index.css
@@ -303,7 +303,7 @@ body{
 @media screen and (max-width: 500px) {
     .hero {
         background: #131313;
-        background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/fetchtom.jpg');
+        background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./img/fetchtom.jpg');
         background-position: center;
         background-size: cover;        
     }
